src/styles/commentRow.module.css
.commentRow {
  margin: 16px 0 24px;
}

.nameBar {
  white-space: nowrap;
  word-wrap: break-word;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;

  display: flex;
  justify-content: space-between;
}

.displayName {
  font-weight: bold;
}

.userId {
  margin-left: 8px;
  color: #777;
}

.createdAt {
  margin-left: 8px;
  color: #777;
}

.menuButton {
  background-color: transparent;  
  border: none;
  color: #aaa;
  padding: 4px;
  cursor: pointer;
}

.commentRow p {
  max-width: 100%;
  word-wrap: break-word;
  margin-top: 4px;
}

